# citation-format-checker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  index.html  pyproject.toml
.github/workflows/: deploy.yml
evals/: conftest.py  test_golden.py  test_rubric.py  test_rules.py
